# prior-auth-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AppealPreview.tsx  FileUpload.tsx  PatientContextForm.tsx  TextInputMode.tsx
src/: __init__.py
src/api/: main.py
src/api/routes/: appeals.py  health.py  payers.py
src/core/: config.py  database.py  db_models.py  models.py  repositories.py  services.py
src/integrations/: __init__.py  llm.py  ocr.py
src/templates/: __init__.py  appeal_templates.py
tests/: __init__.py  test_api.py  test_pipeline.py
